7.2.0-SNAPSHOT/about/applications.md
---
layout: default
title: Anwendungen
description: "InGrid: Indexieren, Recherchieren, Visualisieren, Teilen"
---

## Einsatzmöglichkeiten von InGrid

### Einsatz als Umweltinformationportal

InGrid wird für den Aufbau verschiedener Landesumweltportalen eingesetzt. Seine Daten- und Modulstrukturen ermöglichen den Einsatz auf lokaler, regionaler, nationaler und internationaler Ebene.

Einfache Änderungen der Portaloberfläche können durch Anpassung von Stylesheets und den Austausch von Bilddateien vorgenommen werden. Weitergehende Anforderungen an das Layout können durch die Entwicklung eigener Ansichtsprofile realisiert werden.


### Einsatz als Geo-Portal

InGrid unterstützt die von der GDI-DE bzw. von INSPIRE geforderten OGC-Standards für die Recherche (CSW), die Visualisierung (WMS) und den Download (ATOM/WFS) von Geodaten.

Über den eingebauten Kartenklienten können OGC-konforme Kartendienste dargestellt und kombiniert werden. So können die über die Metadatensuche gefundenen Kartendienste direkt angezeigt und analysiert werden.

Mit dem InGridCatalog verfügt die InGrid-Architektur über eine web-basierte leistungsfähige Metadatenerfassungs- und -pflegekomponente, die konform zu den maßgeblichen Standards (ISO 19115/19119, OGC-CSW/WMS, INSPIRE,  GDI-DE-Konventionen) weiter entwickelt wird. Damit erfüllt InGrid alle Kriterien zum Einsatz als Geoportal.

### Einsatz als Opendata Portal

InGrid bringt alle Komponenten für den Aufbau eines Opendata Portals mit. Der leistungsfähige, flexible Editor ermöglicht die komfortable Erfassung von Opendata Metadaten.

Die Daten können über das angeschlossene Portal recherchiert werden oder im DCAT-AP.DE Format über eine GOVDATA.de kompatible REST Schnittstelle abgegeben werden.

* [mCLOUD: Suche offener Daten auf der Mobilitätsplattform des BMDV](https://mcloud.de).
Aus der mCLOUD gehen zentrale Technologien in der InGrid Plattform auf, wie z.B. die Harvester-Komponente, mit der verschiedenste Datenquellen geharvestet und in den OpenData Pool des Portals aufgenommen werden. Mittels verschiedener Konfigurationen und Erweiterungen im GUI können komfortabel Prioritäten und Spezialitäten beim Harvesting der verschiedenen Quellen gesteuert werden (Deduplizierung, Filter, Ergänzungen).
Weiterhin geht die ausgefeilte Ortssuche mittels Indexierung, Verschneidung und Darstellung nach Relevanz im InGrid Portal auf.

### Einsatz als Intranet GeoPortal

InGrid lässt sich als Intranet Portal verwenden. Mit unterschiedlichen Datenquellenadaptern lassen sich heterogene Datenquellen über eine einheitliche Suche erschließen.

### Einsatz als UVP Portal (Umweltverträglichkeitsprüfungen)

InGrid unterstützt die Erfassung und Publikation von Umweltverträglichkeitsprüfungen inkl. Abbildung von Verfahrensschritten, Upload von Dokumenten und Publikation von Informationen zur Bauleitplanung.

* [Umweltverträglichkeitsprüfungen der deutschen Bundesländer](https://www.uvp-verbund.de)
* [Umweltverträglichkeitsprüfungen von Niedersachsen](https://uvp.niedersachsen.de)

### Einsatz als Opendata Editor

Über die flexible Komponenten-Architektur kann InGrid auch als reines Erfassungstool für offene Daten verwendet werden.

* [Zentraler Open Data Editor des Bundes (im Aufbau)](https://editor.opendata.bund.de/index.html)
* [mCLOUD: Erfassung offener Daten für die Mobilitätsplattform des BMDV](https://mcloud.de).
Das OpenData Profil der mCLOUD dient als Basis für zukünftige Erfassung und Pflege von Open Data Pools mit dem InGrid Editor.
 
### Einsatz als allgemeines Verwaltungsportal

Über InGrid lässt sich zudem ein allgemeines Verwaltungsportal aufbauen. Dabei ist der thematische Fokus nicht auf den Bereich Umwelt eingeschränkt, sondern deckt alle verwaltungsrelevanten Themenbereiche ab. Erforderliche Anpassungen am Layout lassen sich ohne viel Aufwand realisieren.
 
### Einsatz als Umweltportal in anderen europäischen Staaten

Auch ein Einsatz außerhalb Deutschlands ist möglich. Die Oberflächen sind vollständig lokalisierbar. Indexierungen können an unterschiedliche Sprachen angepasst werden.

### Einsatz als europäisches Umweltportal

Technisch gesehen unterscheidet sich der Einsatz von InGrid auf europäischer Ebene nur geringfügig von dem auf nationaler Ebene. Die Software ist grundsätzlich so organisiert, dass auch Hierarchiestufen oberhalb der nationalen Ebene abgedeckt werden können.

## InGrid-Installationen bei deutschen Behörden und Institutionen:

### Länderportale

* [MetadatenVerbund (MetaVer) der Länder Brandenburg, Bremen, Hamburg, Sachsen-Anhalt, Mecklenburg-Vorpommern](http://metaver.de/)
* [NUMIS - Niedersächsisches Umweltportal](http://numis.niedersachsen.de/)
* [PortalU Rheinland Pfalz - behördliche Umweltinformationen aus Rheinland Pfalz](http://www.portalu.rlp.de/)
* [Umweltportal Schleswig-Holstein](https://umweltportal.schleswig-holstein.de/)
* [Umweltgeodaten für Baden-Württemberg](https://rips-metadaten.lubw.de)
        

### Weitere Anwendungen

* Geoportal der Wasser- und Schifffahrtsverwaltung des Bundes im Geschäftsbereich des Bundesministeriums für Verkehr und digitale Infrastruktur, betrieben durch das [Informationstechnikzentrum Bund (ITZBund)](https://www.itzbund.de/)


		
## InGrid auf EU-Ebene:

* GS Soil Portal: Das europäisches Bodenportal wurde im Rahmen des EU-Projekt GS Soil eingesetzt. (Installation ist nicht mehr online.) Weitere Informationen:

  * https://www.bgr.bund.de/DE/Themen/Boden/Projekte/Informationsgrundlagen-abgeschlossen/GSSoil/GSSoil.html
  * https://inspire.ec.europa.eu/SDICS/gs-soil
  * http://www.eurogeosurveys.org/projects/gssoil/